implementa padrão de projeto strategy
implementa padrão de projeto strategy e adiciona testes